<resources>
    <string name="app_name">UniJobs</string>

    <string name="action_profile">Perfil</string>
    <string name="action_logout">Logout</string>

    <string name="text_sellpoint">Você tem algum talento escondido?\nGanhe dinheiro com isso!</string>
    <string name="tab_offered_services">Oferecidos</string>
    <string name="tab_demanded_services">Demandados</string>
    <string name="text_login">Login</string>
    <string name="text_criar_conta">Não tem uma conta? crie uma gratuitamente!</string>
    <string name="hint_senha">SENHA</string>
    <string name="hint_email">EMAIL</string>
    <string name="text_descricao">Você tem algum talento escondido? Ganhe dinheiro com isso!</string>
    <string name="text_registre_se">Registre-se</string>
    <string name="hint_imagem">IMAGEM</string>
    <string name="hint_nome">NOME</string>
    <string name="hint_foto">Clique acima para escolher uma imagem</string>
    <string name="content_description_imagem_servico">Imagem do serviço</string>
    <string name="hint_titulo">TÍTULO</string>
    <string name="hint_descricao">DESCRIÇÃO</string>
    <string name="radioButtonOferta">Oferta</string>
    <string name="radioButtonDemanda">Demanda</string>
    <string name="text_confirmar_servico">Confirmar</string>
    <string name="action_search">Buscar</string>
    <string name="action_my_offers">Minhas Ofertas</string>
    <string name="text_salvar">Salvar</string>
</resources>
