<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="1"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="2"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_my_offers"
        android:orderInCategory="3"
        android:title="@string/action_my_offers"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="9"
        android:title="@string/action_logout"
        app:showAsAction="never"
        />
</menu>
