<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC0079BE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.RegisterServiceActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/register_service_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/register_service_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounder_border"
                android:elevation="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/imageViewService"
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/content_description_imagem_servico"
                    android:src="@drawable/ic_menu_camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_foto"
                    android:textColor="@color/colorText" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="#99ffffff"
                    android:checkedButton="@id/radioButtonOferta"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonOferta"
                        android:layout_width="150dp"
                        android:layout_height="40sp"
                        android:fontFamily="@font/lato"
                        android:text="@string/radioButtonOferta"
                        android:textColor="@color/colorText"
                        android:textColorHint="#99ffffff"
                        app:autoSizeStepGranularity="2sp"
                        app:autoSizeTextType="uniform" />

                    <RadioButton
                        android:id="@+id/radioButtonDemanda"
                        android:layout_width="150dp"
                        android:layout_height="40sp"
                        android:fontFamily="@font/lato"
                        android:text="@string/radioButtonDemanda"
                        android:textColor="@color/colorText"
                        android:textColorHint="#99ffffff"
                        app:autoSizeStepGranularity="2sp"
                        app:autoSizeTextType="uniform" />

                </RadioGroup>

                <EditText
                    android:id="@+id/editTextTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_weight="0"
                    android:backgroundTint="#99ffffff"
                    android:fontFamily="@font/lato"
                    android:hint="@string/hint_titulo"
                    android:inputType="text"
                    android:textColor="@color/colorText"
                    android:textColorHint="#99ffffff"
                    app:autoSizeMaxTextSize="60sp"
                    app:autoSizeMinTextSize="40sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <EditText
                    android:id="@+id/editTextDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_weight="0"
                    android:backgroundTint="#99ffffff"
                    android:fontFamily="@font/lato"
                    android:hint="@string/hint_descricao"
                    android:inputType="text"
                    android:textColor="@color/colorText"
                    android:textColorHint="#99ffffff"
                    app:autoSizeMaxTextSize="60sp"
                    app:autoSizeMinTextSize="40sp"
                    app:autoSizeStepGranularity="2sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="220dp">

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/spin_kit"
                    style="@style/SpinKitView.Large.Pulse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:SpinKit_Color="@color/colorAccent" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/buttonRegisterService"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_borderbutton"
            android:elevation="20dp"
            android:fontFamily="@font/mont"
            android:text="@string/text_confirmar_servico"
            android:textAllCaps="true"
            android:textColor="@color/colorText" />

    </LinearLayout>

</ScrollView>